fixed spacing on about page

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,8 @@ textarea{
         grid-gap: 30px;
         padding: var(--default-spacing);
         text-align:center;
-        max-width:1250px;
+        max-width:1750px;
+        margin:0 auto;
     }
     .about-grid__item{
         width:auto;
